# onyx-server

./: Cargo.toml  LICENSE  README.md
src/: auth.rs  cli.rs  config.rs  db.rs  error.rs  instance_config.rs  main.rs  menu.rs  moderation.rs  pm.rs  rate_limit.rs  server.rs
src/handlers/: auth_handlers.rs  avatars.rs  groups.rs  info.rs  media.rs  members.rs  messages.rs  mod.rs
src/media/: anonfiles.rs  catbox.rs  custom.rs  fileio.rs  local.rs  mod.rs  pixeldrain.rs
src/models/: ban.rs  group.rs  member.rs  message.rs  mod.rs  session.rs
src/ws/: connection.rs  hub.rs  mod.rs  protocol.rs
